apps/argo-workflows/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-workflows
  namespace: argowf
  annotations:
    link.argocd.argoproj.io/external-link: https://argowf.devxp-tech.io
spec:
  hosts:
    - "argowf.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argo-workflows-server.argowf.svc.cluster.local
            port:
              number: 2746
